# InternetShop

./: .env.example  .gitignore  Dockerfile  alembic.ini  app.py  docker-compose.yml  main.py  pyproject.toml
app/: database.py
app/user/: models.py
src/config/: alchemy_conf.py  api_conf.py  logger_conf.py
src/data_layer/alchemy/migrations/: env.py
src/data_layer/alchemy/migrations/versions/: 6fefe246f0f1_create_tables.py  8651c0024875_add_products_table.py  9d54c8441b86_initial.py  a6823939e30e_remove_date_from_reviews.py
src/data_layer/alchemy/models/: __init__.py  base.py  categories.py  order.py  product.py  product_orders.py  review.py  user.py
src/depends/: get_current_token.py  required_role.py
src/resources/: base.py  categories.py  order.py  product.py  product_orders.py  review.py  user.py
src/router/: include_rouers.py  include_routers.py
src/router/spa/: auth.py  categories.py  order.py  product.py  product_orders.py  review.py  user.py
src/schemas/: categories.py  order.py  product.py  product_orders.py  review.py  token.py  user.py
src/schemas/enums/: user.py
src/schemas/request/: categories.py  login.py  order.py  product.py  product_orders.py  review.py  user.py
src/schemas/response/: user.py
src/utills/: hash_passwd.py  jwt_utills.py
