[tool.poetry]
name = "internetshop"
version = "0.1.0"
description = ""
authors = ["yarolys <lysov.yaroslav.r@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.12"
apscheduler = "^3.11.0"
uvicorn = "^0.34.0"
loguru = "^0.7.3"
sqlalchemy = "^2.0.40"
alembic = "^1.15.2"
asyncpg = "^0.30.0"
python-dotenv = "^1.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
